--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -1,7 +1,7 @@
 # WARNING: Do NOT change the Petz Mod preferences here
 # Do create a 'user.conf' with your favourite preferences instead of.
 
-petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula,butterfly,rat,goat,squirrel,leopard,snow_leopard
+petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula,butterfly,rat,goat,squirrel,leopard,snow_leopard,ant,warrior_ant,queen_ant
 
 ##Tamagochi Mode  (Take care of your pet: fed it...)
 tamagochi_mode = true
@@ -48,6 +48,7 @@ spawn_peaceful_monsters_ratio = 0.7
 ###Add the type name of the petz plus "_disable_spawn"
 ###Normal bees should not spam!!!
 bee_disable_spawn = true
+ant_disable_spawn = true
 
 ## The interval is avg spawn attempt interval (seconds) for every player
 spawn_interval = 30
@@ -111,6 +112,11 @@ gallop_recover_time= 60
 poop = true
 poop_rate = 600
 poop_decay = 1200
+
+##Ant
+lay_antegg_timing = 1200
+max_laid_anteggs = 500
+ant_population = 5
 
 ##Lay Eggs
 #Default = 90000
@@ -474,3 +480,12 @@ snow_leopard_spawn_nodes = default:snowblock,default:ice
 snow_leopard_spawn_min_height = 20
 snow_leopard_preys = petz:lamb,petz:calf,petz:pony,petz:piggy,petz:camel,petz:goat
 snow_leopard_spawn_biome = default
+
+##Ant Specific
+ant_preys = petz:queen_ant
+
+##Queen Ant Specific
+queen_ant_spawn_chance = 0.4
+queen_ant_spawn_nodes = default:dirt_with_grass,default:desert_sand
+queen_ant_preys = petz:queen_ant
+queen_ant_spawn_biome = default
