--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -49,6 +49,7 @@ spawn_peaceful_monsters_ratio = 0.7
 ###Normal bees should not spam!!!
 bee_disable_spawn = true
 ant_disable_spawn = true
+warrior_ant_disable_spawn = true
 
 ## The interval is avg spawn attempt interval (seconds) for every player
 spawn_interval = 30
