--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -120,8 +120,8 @@ max_laid_anteggs = 500
 ant_population = 5
 
 ##Lay Eggs
-#Default = 90000
-lay_egg_chance = 90000
+#Default = 1200= 1 egg by day
+lay_egg_timing = 1200
 #Max eggs to hatch by animal
 max_laid_eggs = 10
 
