--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -170,6 +170,9 @@ igniter_damage = 1
 ##Weapons
 pumpkin_grenade_damage = 8
 
+##Disable Kennel
+disable_kennel = false
+
 ##Server Cron Tasks
 ##Clear non-tamed Mobs in the server from time to time
 ##Put '0' for disabled it.
