--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -1,7 +1,7 @@
 # WARNING: Do NOT change the Petz Mod preferences here
 # Do create a 'user.conf' with your favourite preferences instead of.
 
-petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula,butterfly,rat,goat,squirrel,leopard,snow_leopard,ant,warrior_ant,queen_ant
+petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula,butterfly,rat,goat,squirrel,leopard,snow_leopard,ant,warrior_ant,queen_ant,rooster
 
 ##Tamagochi Mode  (Take care of your pet: fed it...)
 tamagochi_mode = true
@@ -124,6 +124,8 @@ ant_population = 5
 lay_egg_timing = 1200
 #Max eggs to hatch by animal
 max_laid_eggs = 10
+#Time an egg to hatch
+hatch_egg_timing = 500
 
 ##Misc Random Sound for Petz
 #Default = 50
@@ -152,7 +154,7 @@ max_honey_behive = 10
 max_bees_behive = 3
 #bees_outing_rate=1 means that a bee inmediatelly go out the behive for pollen
 bee_outing_ratio = 20
-#The time between a Beehive is created by a player and a worker bee is automatically created
+#The time between a Beehive is created by a pger and a worker bee is automatically created
 worker_bee_delay = 300
 #behive_spawn_chance = 0.6
 #max_behives_in_area = 3
