--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -293,6 +293,20 @@ chicken_spawn_nodes = default:dirt_with_grass
 chicken_spawn_biome = default
 chicken_predators = petz:foxy
 
+##Hen Specific
+hen_follow = farming:seed_wheat
+hen_spawn_chance = 0.6
+hen_spawn_nodes = default:dirt_with_grass
+hen_spawn_biome = default
+hen_predators = petz:foxy
+
+##Rooster Specific
+rooster_follow = farming:seed_wheat
+rooster_spawn_chance = 0.6
+rooster_spawn_nodes = default:dirt_with_grass
+rooster_spawn_biome = default
+rooster_predators = petz:foxy
+
 #Piggy Specific
 piggy_follow = farming:wheat
 piggy_spawn_chance = 0.6
