--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -50,6 +50,8 @@ spawn_peaceful_monsters_ratio = 0.7
 bee_disable_spawn = true
 ant_disable_spawn = true
 warrior_ant_disable_spawn = true
+rooster_disable_spawn = true
+chicken_disable_spawn = true
 
 ## The interval is avg spawn attempt interval (seconds) for every player
 spawn_interval = 30
