--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -121,6 +121,10 @@ lay_antegg_timing = 1200
 max_laid_anteggs = 500
 ant_population = 5
 
+##Children search for their parents
+#Only for chicks
+parent_search = true
+
 ##Lay Eggs
 #Default = 1200= 1 egg by day
 lay_egg_timing = 1200
@@ -308,6 +312,7 @@ rooster_spawn_chance = 0.6
 rooster_spawn_nodes = default:dirt_with_grass
 rooster_spawn_biome = default
 rooster_predators = petz:foxy
+rooster_preys = petz:rooster
 
 #Piggy Specific
 piggy_follow = farming:wheat
