--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -1,7 +1,7 @@
 # WARNING: Do NOT change the Petz Mod preferences here
 # Do create a 'user.conf' with your favourite preferences instead of.
 
-petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula,butterfly,rat,goat,squirrel,leopard,snow_leopard,ant,warrior_ant,queen_ant,rooster,hen
+petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula,butterfly,rat,goat,squirrel,leopard,snow_leopard,ant,warrior_ant,queen_ant,rooster,hen,bunny
 
 ##Tamagochi Mode  (Take care of your pet: fed it...)
 tamagochi_mode = true
@@ -516,3 +516,13 @@ queen_ant_spawn_chance = 0.4
 queen_ant_spawn_nodes = default:dirt_with_grass,default:desert_sand
 queen_ant_preys = petz:queen_ant
 queen_ant_spawn_biome = default
+
+##Bunny Specific
+bunny_follow = farming:wheat
+bunny_spawn_chance = 0.6
+bunny_spawn_nodes = default:dirt_with_grass
+bunny_predators = petz:foxy
+bunny_spawn_biome = default
+bunny_spawn_herd = 3
+bunny_breed = default:blueberries
+bunny_copulation_distance = 2
