--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -428,7 +428,7 @@ mr_pumpkin_seasonal = halloween
 foxy_follow = group:food_meat_raw
 foxy_spawn_chance = 0.8
 foxy_spawn_nodes = default:dirt_with_coniferous_litter,default:dirt_with_grass
-foxy_preys = petz:ducky,petz:chicken,petz:hamster,petz:squirrel
+foxy_preys = petz:ducky,petz:chicken,petz:hamster,petz:squirrel,petz:bunny,petz:hen,petz:rooster
 foxy_spawn_biome = default
 
 ##Penguin Specific
