--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -186,6 +186,10 @@ disable_kennel = false
 ##Put '0' for disabled it.
 clear_mobs_time = 0
 
+##Go Back Home Distance
+#If dreamctacher and checked "Automatic Go Back..."
+back_home_distance = 10
+
 ##Specific Settings for Mobs
 #Spawn Chance should be a value form 0.0 to 1.0
 
