--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -91,6 +91,9 @@ blood = false
 colorize_punch = true
 punch_color = #FF0000
 
+##Tag Background
+tag_background = true
+
 ##Smoke particles when die
 death_effect = true
 
