--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -92,7 +92,7 @@ colorize_punch = true
 punch_color = #FF0000
 
 ##Tag Background
-tag_background = true
+tag_background = false
 
 ##Smoke particles when die
 death_effect = true
