--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -3,6 +3,10 @@
 
 petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula,butterfly,rat,goat,squirrel,leopard,snow_leopard,ant,warrior_ant,queen_ant,rooster,hen,bunny
 
+#This list is to remove already existing entities in the game
+##Note that overrides the petz_list
+remove_list =
+
 ##Tamagochi Mode  (Take care of your pet: fed it...)
 tamagochi_mode = true
 ##check_time: default 2400
