added the remove_list setting to delete already existing entities in the game

--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -5,7 +5,7 @@ petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,p
 
 #This list is to remove already existing entities in the game
 ##Note that overrides the petz_list
-remove_list = kitty,puppy
+remove_list =
 
 ##Tamagochi Mode  (Take care of your pet: fed it...)
 tamagochi_mode = true
