added the max_per_species setting to limit the spawn by species

--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -59,8 +59,11 @@ chicken_disable_spawn = true
 ## The interval is avg spawn attempt interval (seconds) for every player
 spawn_interval = 30
 
-## Max number of mobs in the active block range
+## Spawn: Max number of mobs in the active block range
 max_mobs = 60
+
+## Spawn: Max number of the same species in the active block range
+max_per_species = 10
 
 ## Chance to spawn a mob if there are no other objects in area
 # the value should be 0 - 1
