possibility of no damage if enable_damage or in protected areas

--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -179,6 +179,13 @@ lycanthropy = true
 lycanthropy_infection_chance_by_wolf = 200
 lycanthropy_infection_chance_by_werewolf = 10
 
+##Damage Engine
+#If this setting is 'true', checks the "enable_damage" setting of the game
+#and if 'enable_damage=false', disables the damage for pets too.
+check_enable_damage = false
+#Petz are not damaged in protected areas
+no_damage_in_protected = true
+
 ##Enviromental Damage
 air_damage = 1
 #Lava & Fire
