possibility of no damage if enable_damage or in protected areas

--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -184,7 +184,7 @@ lycanthropy_infection_chance_by_werewolf = 10
 #and if 'enable_damage=false', disables the damage for pets too.
 check_enable_damage = false
 #Petz are not damaged in protected areas
-no_damage_in_protected = true
+no_damage_in_protected = false
 
 ##Enviromental Damage
 air_damage = 1
