only owners of their ponies can get some seed

--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -89,6 +89,8 @@ look_at_random = 10
 pregnant_count = 5
 pregnancy_time = 300
 growth_time = 1200
+#Only owners can extract some seed from their ponies
+seed_only_owners = true
 
 ##Bloody Mode
 blood = false
