--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -90,6 +90,7 @@ pregnancy_time = 300
 growth_time = 1200
 #Only owners can extract some seed from their ponies
 seed_only_owners = true
+disable_syringe = false
 
 ##Bloody Mode
 blood = false
@@ -307,6 +308,8 @@ pony_spawn_nodes = default:dirt_with_grass
 pony_predators = petz:lion,petz:leopard
 pony_spawn_biome = default
 pony_spawn_herd = 5
+pony_breed = default:blueberries
+pony_copulation_distance = 3
 
 ##Parrot Specific
 parrot_follow = farming:seed_wheat
