new setting 'protect_beehive' to avoid honey plundering

--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -166,15 +166,16 @@ herding_members_distance = 5
 herding_shepherd_distance = 5
 
 #Bee stuff
-initial_honey_behive = 3
-max_honey_behive = 10
-max_bees_behive = 3
-#bees_outing_rate=1 means that a bee inmediatelly go out the behive for pollen
+initial_honey_beehive = 3
+max_honey_beehive = 10
+max_bees_beehive = 3
+protect_beehive = false
+#bees_outing_rate=1 means that a bee inmediatelly go out the beehive for pollen
 bee_outing_ratio = 20
 #The time between a Beehive is created by a pger and a worker bee is automatically created
 worker_bee_delay = 300
-#behive_spawn_chance = 0.6
-#max_behives_in_area = 3
+#beehive_spawn_chance = 0.6
+#max_beehives_in_area = 3
 
 #Lycanthropy stuff
 lycanthropy = true
