fix:free silk creation when replacing a spinning wheel

--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -78,6 +78,10 @@ horseshoe_speedup = 0.2
 ##lashing
 lashing_tame_count = 3
 
+#Spinning Wheel
+##amount of silk to craft a bobbin in a spinning_wheel
+silk_to_bobbin = 3
+
 ##look_at
 look_at = true
 #random probability of look_at
