leopard breeding; black panther

--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -1,7 +1,7 @@
 # WARNING: Do NOT change the Petz Mod preferences here
 # Do create a 'user.conf' with your favourite preferences instead of.
 
-petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula,butterfly,rat,goat,squirrel,leopard,snow_leopard,ant,warrior_ant,queen_ant,rooster,hen,bunny
+petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula,butterfly,rat,goat,squirrel,leopard,ant,warrior_ant,queen_ant,rooster,hen,bunny
 
 #This list is to remove already existing entities in the game
 ##Note that overrides the petz_list
@@ -76,7 +76,7 @@ no_spawn_in_protected = false
 horseshoe_speedup = 0.2
 
 ##lashing
-lashing_tame_count = 3
+lashing_tame_count = 2
 
 #Spinning Wheel
 ##amount of silk to craft a bobbin in a spinning_wheel
@@ -531,6 +531,8 @@ leopard_spawn_chance = 1.0
 leopard_spawn_nodes = default:dirt_with_dry_grass,default:dry_dirt,default:dry_dirt_with_dry_grass
 leopard_preys = petz:lamb,petz:calf,petz:pony,petz:piggy,petz:camel,petz:goat
 leopard_spawn_biome = default
+leopard_breed = default:blueberries
+leopard_copulation_distance = 2
 
 ##Snow Leopard
 snow_leopard_follow = group:food_meat_raw
@@ -539,6 +541,8 @@ snow_leopard_spawn_nodes = default:snowblock,default:ice
 snow_leopard_spawn_min_height = 20
 snow_leopard_preys = petz:lamb,petz:calf,petz:pony,petz:piggy,petz:camel,petz:goat
 snow_leopard_spawn_biome = default
+snow_leopard_breed = default:blueberries
+snow_leopard_copulation_distance = 2
 
 ##Ant Specific
 ant_preys = petz:queen_ant
