--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -7,6 +7,9 @@ petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,p
 ##Note that overrides the petz_list
 remove_list =
 
+#Perfomance
+speed_up = true
+
 ##Tamagochi Mode  (Take care of your pet: fed it...)
 tamagochi_mode = true
 ##check_time: default 2400
