fix a regression in the last commit

--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -7,7 +7,7 @@ petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,p
 ##Note that overrides the petz_list
 remove_list =
 
-#Perfomance
+#Performance
 speed_up = true
 
 ##Tamagochi Mode  (Take care of your pet: fed it...)
