fix:flamingos don't naturally spawn

--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -567,3 +567,9 @@ bunny_spawn_biome = default
 bunny_spawn_herd = 3
 bunny_breed = default:blueberries
 bunny_copulation_distance = 2
+
+##Flamingo Specific
+flamingo_follow = petz:silkworm_set
+flamingo_spawn_chance = 0.8
+flamingo_spawn_nodes = default:dirt_with_coniferous_litter,default:dirt_with_grass,default:dirt_with_dry_grass,default:dry_dirt,default:dry_dirt_with_dry_grass
+flamingo_spawn_biome = default
