--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -1,7 +1,7 @@
 # WARNING: Do NOT change the Petz Mod preferences here
 # Do create a 'user.conf' with your favourite preferences instead of.
 
-petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula,butterfly,rat,goat,squirrel,leopard,ant,warrior_ant,queen_ant,rooster,hen,bunny,flamingo
+petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula,butterfly,rat,goat,squirrel,leopard,ant,warrior_ant,queen_ant,rooster,hen,bunny,flamingo,gecko
 
 #This list is to remove already existing entities in the game
 ##Note that overrides the petz_list
