new petz: Gecko!

--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -573,3 +573,9 @@ flamingo_follow = petz:silkworm_set
 flamingo_spawn_chance = 0.8
 flamingo_spawn_nodes = default:dirt_with_coniferous_litter,default:dirt_with_grass,default:dirt_with_dry_grass,default:dry_dirt,default:dry_dirt_with_dry_grass
 flamingo_spawn_biome = default
+
+##Gecko Specific
+gecko_follow = petz:butterfly
+gecko_spawn_chance = 0.8
+gecko_spawn_nodes = default:dirt_with_coniferous_litter,default:dirt_with_grass,default:dirt_with_dry_grass,default:dry_dirt,default:dry_dirt_with_dry_grass
+gecko_spawn_biome = default
