--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -225,6 +225,8 @@ kitty_spawn_chance = 0.6
 kitty_spawn_nodes = default:dirt_with_grass
 kitty_spawn_biome = default
 kitty_preys = petz:rat
+kitty_breed = default:blueberries
+kitty_copulation_distance = 2
 
 ##Puppy Specific
 puppy_follow = petz:bone, group:food_meat_raw
