petz don't jump fences

--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -166,6 +166,9 @@ cobweb_decay = 1200
 #Sleeping behaviour
 sleeping = true
 
+#Jump Fences
+jump_fences = false
+
 #Herding Behaviour
 herding = true
 herding_timing = 3
