--- a/petz/petz_OLD.conf
+++ b/petz/petz_OLD.conf
@@ -136,7 +136,7 @@ poop_decay = 1200
 
 ##Ant
 lay_antegg_timing = 1200
-max_laid_anteggs = 500
+ant_max_laid_eggs = 500
 ant_population = 5
 
 ##Children search for their parents
