restrict the spawning to certain defined areas (boxes)

--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -58,21 +58,24 @@ ant_disable_spawn = true
 warrior_ant_disable_spawn = true
 chicken_disable_spawn = true
 
+#SPAM
 ## The interval is avg spawn attempt interval (seconds) for every player
 spawn_interval = 30
-
 ## Spawn: Max number of mobs in the active block range
 max_mobs = 60
-
 ## Spawn: Max number of the same species in the active block range
 max_per_species = 10
-
 ## Chance to spawn a mob if there are no other objects in area
 # the value should be 0 - 1
 spawn_chance = 1.0
-
 #do not spawn in protected
 no_spawn_in_protected = false
+#SPAWN AREAS: The mobs only spawn in this areas
+##Put them in the user.conf file to restrict the spawning certain areas
+##The areas are defined by 6 parameters (a box defined with p1 and p2 points separated with ';')
+##Each area definition should by separated with '|'
+##Example to put in user.conf to set two areas:
+##spawn_areas=10,10,10;200,200,200|1000,1000,1000;1500,1500,1500
 
 ##horseshoes
 #additive effect
