--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -139,7 +139,7 @@ poop_decay = 1200
 
 ##Ant
 lay_antegg_timing = 1200
-max_laid_anteggs = 500
+ant_max_laid_eggs = 50
 ant_population = 5
 
 ##Children search for their parents
