new alternative petz.conf file in the world dir

--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -1,5 +1,7 @@
 # WARNING: Do NOT change the Petz Mod preferences here
-# Do create a 'user.conf' with your favourite preferences instead of.
+#Do create a 'user.conf' file in the mod dir with your favourite preferences instead of.
+#Alternatively you can create a  'petz.conf' file in the world folder.
+#Note: Creating a 'petz.conf' in the world folder will disable the 'user.conf' if it exists.
 
 petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula,butterfly,rat,goat,squirrel,leopard,ant,warrior_ant,queen_ant,rooster,hen,bunny,flamingo,gecko
 
