petz now out the doors

--- a/petz/petz.conf
+++ b/petz/petz.conf
@@ -174,6 +174,9 @@ sleeping = true
 #Jump Fences
 jump_fences = false
 
+#Out doors
+out_doors = true
+
 #Herding Behaviour
 herding = true
 herding_timing = 3
